<resources>
    <string name="app_name">Atividade 2</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="company_name">Company Name</string>
    <string name="sologan_here">Sologan Here</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_social_media">Sign in with Social Media</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have account?</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="allow_term_and_conditions"><![CDATA[Allow Term & Conditions]]></string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>