<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_tela_login"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingTop="20dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:background="@drawable/shape_contorno_logo"
            android:contentDescription="@string/company_name"
            android:padding="15dp"
            android:src="@drawable/two_down_arrows_logo"
            app:tint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_edit_text"
            android:drawableEnd="@drawable/background_edittext_user"
            android:inputType="text"
            android:paddingHorizontal="15dp"
            android:text="@string/username"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_edit_text"
            android:drawableEnd="@drawable/background_edittext_password"
            android:inputType="textVisiblePassword"
            android:paddingHorizontal="15dp"
            android:text="@string/password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/remember_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_botao_gradiente"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:gravity="end|center"
                android:singleLine="true"
                android:text="@string/forgot_password"
                android:textAlignment="gravity"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="end|center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/font_ios_bold"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="end"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_contorno_imagem"
                    android:src="@drawable/arrow_right"
                    app:tint="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>