<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_tela_login"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingTop="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="3"
            android:textAlignment="center"
            android:textColor="#FFAFAFAF"
            android:textSize="16sp"
            tools:text="@tools:sample/lorem/random" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_contorno_logo"
            android:contentDescription="@string/company_name"
            android:padding="10dp"
            android:src="@drawable/two_down_arrows_logo"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/company_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sologan_here"
            android:textAllCaps="true"
            android:textColor="#FFAFAFAF"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_botao_gradiente"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_botao_gradiente"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_in_with_social_media"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center|top"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/shape_contorno_imagem"
                android:padding="8dp"
                android:src="@drawable/logo_facebook"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/shape_contorno_imagem"
                android:padding="8dp"
                android:src="@drawable/logo_twitter"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/shape_contorno_imagem"
                android:padding="2dp"
                android:src="@drawable/logo_linkedin"
                app:tint="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>